# Coolant-Monitor-Server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt
src/: a_socket_find.cpp  a_socket_find.h  a_socket_read.cpp  a_socket_read.h  main.cpp  ui.cpp  ui.h  utils.cpp  utils.h
